# diastil

./: .gitignore  PLAN.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude-plugin/: marketplace.json
corpus/: README.md
corpus/decks/: bullets.html  demo.html  steps.html
corpus/fixtures/: ambit.json  bullets.json  demo.json  steps.json
design/: DECISION.md  IMPORT.md
design/studies/: 01-bench.html  02-console.html  03-stage.html  04-lichttisch.html  05-lichtbuehne.html  README.md
docs/: BRAND.md  HOUSE-STYLE.md  register-reference.html
examples/: demo-deck.html  what-is-dia.html
integrations/: README.md
profile/: PROFILE.md
public/: ambit-tmp.html  what-is-dia-tmp.html
scripts/: figlint.mjs  make-pptx-fixture.py  standalone.mjs
service/: README.md  config.example.toml  pyproject.toml
service/dia_service/: __init__.py  agents.py  cli.py  evals.py  main.py  mcp.py  pptx_export.py  scaffold.py  validate.py
service/dia_service/skills/: copilot.md  discover-island-params.md  lift-diagram.md  repair-fidelity.md  translate-slide.md
service/evals/lift-diagram/flow/: meta.toml
service/evals/repair-fidelity/flattened-columns/: candidate.html  mismatch.txt  source.html
service/evals/repair-fidelity/missing-kicker/: candidate.html  mismatch.txt  source.html
service/evals/translate-slide/basic/: input.html
service/evals/translate-slide/columns-svg/: input.html
service/evals/translate-slide/utility/: input.html
skills/: README.md
src/: main.ts  state.ts  temml.d.ts  types.ts
src/chrome/: base.css  (+4 more)
(+102 files in other folders)
